[package]
name = "max31855"
version = "0.2.0"
authors = ["cs2dsb <cs2dsb@gmail.com>"]
edition = "2018"
description = "Driver for MAX31855 SPI thermocouple converter"
categories = ["hardware-support"]
keywords = ["embedded-hal-driver", "max31855", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cs2dsb/max31855.rs"
readme = "README.md"
documentation = "https://docs.rs/max31855"
homepage = "https://github.com/cs2dsb/max31855.rs"

[dependencies]
embedded-hal = "=1.0.0-rc.2"
bit_field    = "0.10.0"

[dependencies.embedded-hal-async]
version = "=1.0.0-rc.2"
optional = true

[features]
default = []
async = ["embedded-hal-async"]
